[workspace]
members = [
    "validator-collective",
    "metamui-primitives",
    "node-authorization",
    "collator-selection",
    "node-authorities",
    "validator-set",
    "check-access",
    "collective",
    "cache-did",
    "balances",
    "token",
    "did",
    "vc"
]
[profile.release]
panic = "unwind"
