[package]
name = "balances"
version = "0.0.1"
authors = ['Metamui']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/SovereignWallet-Network/metamui-crates'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.9.26'

[dependencies.frame-support]
default-features = false
git = https://gitThishub.com/paritytech/substrate/tree/polkadot-v0.9.26/frame/support
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.26'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
