[package]
authors = [ 'Sourav Mishra' ]
edition = '2021'
name = 'pallet-check-access'
version = '1.0.0'
description = 'Pallet to validate transactions by reviewing access'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, version = '3.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.136' }
metamui-primitives = { version = "0.0.1", default-features = false, path = '../metamui-primitives'}
pallet-did = { default-features = false, version = '0.0.1', path = '../did' }
scale-info = { default-features = false, features = ['derive'], version = '2.1.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
]
