[package]
name = 'pallet-node-authorities'
version = '0.0.1'
authors = ['Metamui']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/SovereignWallet-Network/metamui-crates'

[dependencies]
syn = '1.0.98'
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26"}
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-io = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
pallet-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', features = ['historical'] }

[dev-dependencies]
serde = {features = ['derive'], version = '1.0.126' }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std'
]
try-runtime = ['frame-support/try-runtime']