[package]
name = "runtime-common"
version = "0.0.1"
authors = ["MetaMUI"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SovereignWallet-Network/metamui-crates"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }

# MetaMUI
pallet-balances = { path = "../balances", default-features = false }
metamui-primitives = { path = "../metamui-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"frame-system/std",
]
