[package]
name = "pallet-sync-did"
authors = ["MetaMUI"]
description = "Sync did pallet to sync did to relay chain."
version = "0.0.1"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.26" }

# Cumulus
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.26" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.26" }

# MetaMUI
pallet-did = { path = "../did", default-features = false}
metamui-primitives = { version = "0.0.1", default-features = false, path = '../metamui-primitives'}

[dev-dependencies]
serde = { version = "1.0.132" }

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
  "pallet-did/std",
	"cumulus-primitives-core/std",
]
try-runtime = [ "frame-support/try-runtime" ]
