[package]
authors = [ 'Metablockchain' ]
edition = '2021'
name = 'pallet-vc'
version = '1.0.0'
description = 'Pallet to store Verfified Credentials'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# alias "parity-scale-code" to "codec"
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

serde = { version = "1.0.132", optional = true }

# To allow deserialization of array greater the 32 elements, which is not supported by serde
serde-big-array =  { version = "0.3.2" }

# Substrate
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26"}
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-io = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.26" }


# Metamui
metamui-primitives = { default-features = false, path = '../metamui-primitives', version = '0.0.1' }
pallet-validator-set = { default-features = false, path = '../validator-set', version = '0.0.1' }
pallet-collective = { default-features = false, path = '../collective', version = '0.0.1' }
pallet-validator-collective = { git = "https://github.com/SovereignWallet-Network/metamui-crates.git", default-features = false, branch = "main" }
pallet-did = { default-features = false, path = "../did", version = '0.0.1' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-validator-set/std',
    'pallet-collective/std',
    'pallet-did/std'
]